# pokemon-graphql-rust

./: .gitignore  Cargo.toml  README.md  config.toml
src/: main.rs  models.rs  pokemon_service.rs
src/model/: mod.rs  query_root.rs  service_schema.rs
src/routes/: evolution.rs  graphql.rs  handler.rs  health.rs  mod.rs  pokemons.rs  species.rs
src/utils/: flattern.rs  mod.rs
