[package]
name = "pokemon-graphql-rust"
version = "0.1.0"
edition = "2021"



[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
async-graphql = "6.0"
async-graphql-warp = "6.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }

