[package]
name = "pokemon-graphql-rust"
version = "0.1.0"
edition = "2021"



[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
async-graphql = "7.0.16"
async-graphql-warp = "7.0.16"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12.15", features = ["json"] }

