[package]
name = "pokemon-graphql-rust"
version = "0.1.0"
edition = "2021"



[dependencies]
futures = "0.3"
once_cell = "1.17.1"
config = "0.15.11"
axum-server = "0.7.2" 
tokio = { version = "1.32.0", features = ["full"] }
warp = "0.3"
async-graphql = "7.0.16"
async-graphql-warp = "7.0.16"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12.15", features = ["json"] }
axum = "0.8.3"
async-graphql-axum = "7.0.16"

